--- a/index.html
+++ b/index.html
@@ -1,24 +1,47 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-  <title>Image Carousel | JavaScript Assignment 1</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
-
+	<title>JS Assignment | Sheshraj Kandel</title>
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 
 <body>
-  <div id="main-wrapper">
-    <!-- <div class="carousel-image">
-      <img src="./1.png" alt="image-2" />
-      <img src="./2.png" alt="image-3" />
-      <img src="./3.png" alt="image-4" />
-      <img src="./4.png" alt="image-5" />
-      <img src="./5.jpg" alt="image-6" />
-    </div> -->
-  </div>
-  <script src="script.js"></script>
+	<h1>JavaScript Assigment</h1>
+	<table class="main-table">
+		<thead>
+			<tr>
+				<th>Date</th>
+				<th>Assignment Description</th>
+				<th>Demo</th>
+				<th>Source Code</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>2nd Oct, 2019</td>
+				<td>Assignment 1: Image Carousel Requirements</td>
+				<td>
+					<a href="./ast1/index.html">Image Carousel</a>
+				</td>
+				<td>
+					<a href="https://github.com/aakritsubedi/js-assignment/blob/gh-pages/assignment/my-info.html">View
+						Code</a>
+				</td>
+			</tr>
+			<tr>
+				<td>3rd Oct, 2019</td>
+				<td>Assignment 2: Configure timings in carousel</td>
+				<td>
+					<a href="assignment/bouncingBall.html">Automated Carousel</a>
+				</td>
+				<td>
+					<a href="https://github.com/aakritsubedi/js-assignment/blob/gh-pages/assignment/bouncingBall.html">View
+						Code</a>
+				</td>
+			</tr>
+		</tbody>
+	</table>
 </body>
 
 </html>
