--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
 	<title>JS Assignment | Sheshraj Kandel</title>
-	<link rel="stylesheet" type="text/css" href="./css/style.css">
+	<link rel="stylesheet" type="text/css" href="./css/layout.css">
 </head>
 
 <body>
 	<h1>JavaScript Assigment</h1>
-	<table class="main-table">
+	<table class="main-table" border="1px">
 		<thead>
 			<tr>
 				<th>Date</th>
@@ -25,7 +25,7 @@
 					<a href="./ast1/index.html">Image Carousel</a>
 				</td>
 				<td>
-					<a href="https://github.com/aakritsubedi/js-assignment/blob/gh-pages/assignment/my-info.html">View
+					<a href="https://github.com/sheshrajkandel/Leapfrog/tree/gh-pages/ast1">View
 						Code</a>
 				</td>
 			</tr>
@@ -33,10 +33,10 @@
 				<td>3rd Oct, 2019</td>
 				<td>Assignment 2: Configure timings in carousel</td>
 				<td>
-					<a href="assignment/bouncingBall.html">Automated Carousel</a>
+					<a href="./ast2/index.html">Automated Carousel</a>
 				</td>
 				<td>
-					<a href="https://github.com/aakritsubedi/js-assignment/blob/gh-pages/assignment/bouncingBall.html">View
+					<a href="https://github.com/sheshrajkandel/Leapfrog/tree/gh-pages/ast2">View
 						Code</a>
 				</td>
 			</tr>
