--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h1>JavaScript Assigment</h1>
-	<table class="main-table" border="1px">
+	<table class="main-container" border="1px">
 		<thead>
 			<tr>
 				<th>Date</th>
