--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
 						Code</a>
 				</td>
 			</tr>
+			<tr>
+				<td>6th Oct, 2019</td>
+				<td style="font-weight: bold;">Project 1: Website Design [Final Submission]</td>
+				<td>
+					<a href="./GraphicDesign/index.html">Website Design</a>
+				</td>
+				<td>
+					<a href="https://github.com/sheshrajkandel/Leapfrog/tree/gh-pages/GraphicDesign">View
+						Code</a>
+				</td>
+			</tr>
 		</tbody>
 	</table>
 </body>
